[gd_scene load_steps=4 format=3 uid="uid://cxid2xxwn0b06"]

[ext_resource type="Script" uid="uid://1mx7sclqql2a" path="res://Scripts/forge.gd" id="1_w38dr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88ku4"]
size = Vector2(150, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_88ku4"]
radius = 124.01613

[node name="Forge" type="Node2D"]
script = ExtResource("1_w38dr")

[node name="Background" type="ColorRect" parent="."]
offset_right = 300.0
offset_bottom = 250.0
color = Color(0.24115604, 0.24115604, 0.24115604, 1)

[node name="WorkStation" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorkStation"]
position = Vector2(225, 123)
shape = SubResource("RectangleShape2D_88ku4")

[node name="ColorRect" type="ColorRect" parent="WorkStation"]
offset_left = 150.0
offset_top = 73.0
offset_right = 300.0
offset_bottom = 173.0
color = Color(0.8901847, 0.5294806, 0.17715505, 1)

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
visible = false
position = Vector2(177, 122)
shape = SubResource("CircleShape2D_88ku4")

[node name="Label" type="Label" parent="InteractionArea"]
offset_left = 149.0
offset_top = 109.0
offset_right = 300.0
offset_bottom = 132.0
text = "Press [E] to interact"

[node name="UI" type="CanvasLayer" parent="."]
layer = 3

[node name="ForgePanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/ForgePanel"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 500.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ForgePanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="UI/ForgePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FORGE"
horizontal_alignment = 1

[node name="RecipesContainer" type="ScrollContainer" parent="UI/ForgePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="RecipesList" type="VBoxContainer" parent="UI/ForgePanel/MarginContainer/VBoxContainer/RecipesContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="UI/ForgePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectedRecipeInfo" type="VBoxContainer" parent="UI/ForgePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RecipeNameLabel" type="Label" parent="UI/ForgePanel/MarginContainer/VBoxContainer/SelectedRecipeInfo"]
layout_mode = 2
text = "Recipe :"

[node name="RequiredItemsLabel" type="Label" parent="UI/ForgePanel/MarginContainer/VBoxContainer/SelectedRecipeInfo"]
layout_mode = 2
text = "Requires :"

[node name="ResultLabel" type="Label" parent="UI/ForgePanel/MarginContainer/VBoxContainer/SelectedRecipeInfo"]
layout_mode = 2
text = "Result :"

[node name="HSeparator2" type="HSeparator" parent="UI/ForgePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="UI/ForgePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="UI/ForgePanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ForgeButton" type="Button" parent="UI/ForgePanel/MarginContainer/VBoxContainer/ButtonsContainer/HBoxContainer"]
layout_mode = 2
text = "Forge"

[node name="HBoxContainer2" type="VBoxContainer" parent="UI/ForgePanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CloseButton" type="Button" parent="UI/ForgePanel/MarginContainer/VBoxContainer/ButtonsContainer/HBoxContainer2"]
layout_mode = 2
text = "X Close"
